--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanda-rn-reset",
+  "name": "tanda-rn",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -31,13 +32,25 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-no-for-of-loops": "^1.0.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-internal": "^0.0.1-security",
+    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-reanimated": "^2.0.1",
     "typescript": "~5.8.3"
   },
   "private": true
