--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "@supabase/supabase-js": "^1.35.6",
+    "@supabase/auth-js": "^2.70.0",
+    "@supabase/postgrest-js": "^1.19.4",
     "axios": "^1.9.0",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
+    "events": "^3.3.0",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -24,6 +27,7 @@
     "expo-status-bar": "~2.2.3",
     "lodash.chunk": "^4.2.0",
     "phosphor-react-native": "^2.3.1",
+    "process": "^0.11.10",
     "react": "19.0.0",
     "react-hook-form": "^7.56.3",
     "react-native": "0.79.2",
@@ -34,7 +38,11 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0",
     "react-native-toast-message": "^2.3.0",
-    "zod": "^3.24.4"
+    "react-native-url-polyfill": "^2.0.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "zod": "^3.24.4",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
