--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
@@ -26,6 +27,7 @@
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "lodash.chunk": "^4.2.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "phosphor-react-native": "^2.3.1",
     "process": "^0.11.10",
     "react": "19.0.0",
@@ -33,6 +35,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-onesignal": "^5.2.12",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
@@ -41,8 +44,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zod": "^3.24.4",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
