--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,12 +22,13 @@
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "~53.0.9",
+    "expo-build-properties": "~0.14.6",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
+    "expo-linking": "^7.1.5",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "lodash.chunk": "^4.2.0",
-    "onesignal-expo-plugin": "^2.0.3",
     "phosphor-react-native": "^2.3.1",
     "process": "^0.11.10",
     "react": "19.0.0",
@@ -35,7 +36,6 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-onesignal": "^5.2.12",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
