Data picker Range and Login with Google

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "expo-linking": "^7.1.5",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
     "lodash.chunk": "^4.2.0",
     "phosphor-react-native": "^2.3.1",
     "process": "^0.11.10",
     "react": "19.0.0",
     "react-hook-form": "^7.56.3",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
