--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@amplitude/analytics-react-native": "^1.4.13",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
@@ -37,6 +38,7 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-mmkv": "^3.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
