--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "expo-sharing": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
