--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "~53.0.9",
-    "expo-build-properties": "~0.14.6",
+    "expo-build-properties": "^0.14.6",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "^7.1.5",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "lodash.chunk": "^4.2.0",
@@ -48,8 +49,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zod": "^3.24.4",
-    "expo-sharing": "~13.1.5"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
