--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -23,11 +24,13 @@
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "~53.0.9",
+    "expo-auth-session": "~6.1.5",
     "expo-build-properties": "~0.14.6",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "^7.1.5",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "lodash.chunk": "^4.2.0",
@@ -49,7 +52,9 @@
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "zod": "^3.24.4",
-    "expo-sharing": "~13.1.5"
+    "expo-dev-client": "~5.1.8",
+    "expo-notifications": "~0.31.2",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
