--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,13 @@
     },
     "production": {
       "distribution": "store",
-      "autoIncrement": true
+      "autoIncrement": true,
+      "ios": {
+        "prebuildCommand": "bash -c \"echo $GOOGLE_SERVICES_PLIST | base64 -d > ios/GoogleService-Info.plist && echo '[BUILD] ✅ .plist recreado OK'\""
+      },
+      "android": {
+        "prebuildCommand": "bash -c \"echo $GOOGLE_SERVICES_JSON | base64 -d > android/app/google-services.json && echo '[BUILD] ✅ .json recreado OK'\""
+      }
     }
   }
 }
