--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,9 @@
     "production": {
       "distribution": "store",
       "autoIncrement": true,
+      "env": {
+        "GOOGLE_SERVICES_PLIST_PATH": "./ios/GoogleService-Info.plist"
+      },
       "ios": {
         "prebuildCommand": "bash -c \"echo $GOOGLE_SERVICES_PLIST | base64 -d > ios/GoogleService-Info.plist && echo '[BUILD] ✅ .plist recreado OK'\""
       },
