--- a/eas.json
+++ b/eas.json
@@ -13,16 +13,7 @@
     },
     "production": {
       "distribution": "store",
-      "autoIncrement": true,
-      "env": {
-        "GOOGLE_SERVICES_PLIST_PATH": "./ios/GoogleService-Info.plist"
-      },
-      "ios": {
-        "prebuildCommand": "bash -c \"echo $GOOGLE_SERVICES_PLIST | base64 -d > ios/GoogleService-Info.plist && echo '[BUILD] ✅ .plist recreado OK'\""
-      },
-      "android": {
-        "prebuildCommand": "bash -c \"echo $GOOGLE_SERVICES_JSON | base64 -d > android/app/google-services.json && echo '[BUILD] ✅ .json recreado OK'\""
-      }
+      "autoIncrement": true
     }
   },
   "submit": {
