--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,7 @@
     },
     "production": {
       "distribution": "store",
-      "autoIncrement": true
+      "autoIncrement": true,
     }
   },
   "submit": {
