Update pushes Onesignal

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "lodash.chunk": "^4.2.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "phosphor-react-native": "^2.3.1",
     "process": "^0.11.10",
     "react": "19.0.0",
@@ -45,6 +46,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-onesignal": "^5.2.12",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
