--- a/eas.json
+++ b/eas.json
@@ -11,9 +11,19 @@
         "buildType": "apk"
       }
     },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": false
+      }
+    },
     "production": {
       "distribution": "store",
-      "autoIncrement": true,
+      "autoIncrement": true
     }
   },
   "submit": {
