--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "expo-tracking-transparency": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
