--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@sentry/react-native": "^6.15.1",
     "@supabase/auth-js": "^2.70.0",
     "@supabase/postgrest-js": "^1.19.4",
     "axios": "^1.9.0",
@@ -34,6 +35,7 @@
     "expo-secure-store": "~14.2.3",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-tracking-transparency": "~5.2.4",
     "expo-web-browser": "~14.1.6",
     "lodash.chunk": "^4.2.0",
     "onesignal-expo-plugin": "^2.0.3",
@@ -55,8 +57,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "zod": "^3.24.4",
-    "expo-tracking-transparency": "~5.2.4"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
