--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -24,7 +25,8 @@
     "date-fns": "^4.1.0",
     "events": "^3.3.0",
     "expo": "~53.0.9",
-    "expo-auth-session": "~6.1.5",
+    "expo-apple-authentication": "~7.2.4",
+    "expo-auth-session": "~6.2.0",
     "expo-build-properties": "~0.14.6",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.1.8",
